--- a/index.html
+++ b/index.html
@@ -1,40 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cafe Menu</title>
-    <link href="styles.css" rel="stylesheet"/>
-  </head>
-  <body>
-    <div class="menu">
-      <main>
-        <h1>CAMPER CAFE</h1>
-        <p>Est. 2020</p>
-        <section>
-          <h2>Coffee</h2>
-          <article class="item">
-            <p class="flavor">French Vanilla</p>
-            <p class="price">3.00</p>
-          </article>
-          <article>
-            <p>Caramel Macchiato</p>
-            <p>3.75</p>
-          </article>
-          <article>
-            <p>Pumpkin Spice</p>
-            <p>3.50</p>
-          </article>
-          <article>
-            <p>Hazelnut</p>
-            <p>4.00</p>
-          </article>
-          <article>
-            <p>Mocha</p>
-            <p>4.50</p>
-          </article>
-        </section>
-      </main>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Greenpeace | Environmental Impact</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#impact">Environmental Impact</a></li>
+        <li><a href="#get-involved">Get Involved</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section id="hero">
+      <div class="hero-content">
+        <h1>Greenpeace</h1>
+        <p>Working towards a cleaner, greener world.</p>
+      </div>
+    </section>
+
+    <section id="about">
+      <div class="container">
+        <h2>About Greenpeace</h2>
+        <p>
+          Insert your content about Greenpeace and their mission here.
+        </p>
+      </div>
+    </section>
+
+    <section id="impact">
+      <div class="container">
+        <h2>Environmental Impact</h2>
+        <p>
+          Insert your content about Greenpeace's efforts in reducing environmental pollution here.
+        </p>
+      </div>
+    </section>
+
+    <section id="get-involved">
+      <div class="container">
+        <h2>Get Involved</h2>
+        <p>
+          Insert your content about how people can join and support Greenpeace here.
+        </p>
+      </div>
+    </section>
+
+    <section id="contact">
+      <div class="container">
+        <h2>Contact Us</h2>
+        <p>
+          Insert your contact information and a contact form here.
+        </p>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2023 Greenpeace. All rights reserved.</p>
     </div>
-  </body>
+  </footer>
+</body>
 </html>
