--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#impact">Environmental Impact</a></li>
-        <li><a href="#get-involved">Get Involved</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -44,18 +43,9 @@
       </div>
     </section>
 
-    <section id="get-involved">
-      <div class="container">
-        <h2>Get Involved</h2>
-        <p>
-          Insert your content about how people can join and support Greenpeace here.
-        </p>
-      </div>
-    </section>
-
     <section id="contact">
       <div class="container">
-        <h2>Contact Us</h2>
+        <h2>Contact Them</h2>
         <p>
           Insert your contact information and a contact form here.
         </p>
@@ -65,7 +55,6 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2023 Greenpeace. All rights reserved.</p>
     </div>
   </footer>
 </body>
