--- a/index.html
+++ b/index.html
@@ -53,18 +53,11 @@
     </section>
   </main>
 
-  <footer>
-    <div class="container">
-      <p>&copy; 2023 Greenpeace. All rights reserved.</p>
-    </div>
-  </footer>
-
   <script>
-    // JavaScript to create the parallax effect
     window.addEventListener('scroll', function() {
       const scrolled = window.scrollY;
       const hero = document.getElementById('hero');
-      hero.style.backgroundPositionY = -(scrolled * 0.5) + 'px'; // Adjust the factor for desired effect
+      hero.style.backgroundPositionY = -(scrolled * 0.5) + 'px';
     });
   </script>
 </body>
