--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#impact">Environmental Impact</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#contact">Contact Them</a></li>
       </ul>
     </nav>
   </header>
@@ -45,7 +45,7 @@
 
     <section id="contact">
       <div class="container">
-        <h2>Contact Us</h2>
+        <h2>Contact Them</h2>
         <p>
           Insert your contact information and a contact form here.
         </p>
