--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="container">
         <h2>About Greenpeace</h2>
         <p>
-          Insert your content about Greenpeace and their mission here.
+          The Greenpeace interest group has many different methods and strategies that all aim to make the planet more green and safer for everyone. They peacefully protest and directly approach government authorities and polluting corporations in order to bring attention to environmental pollution and try to reduce it. Along with preventing environmental abuses this group also aims to preserve endangered animal species across the globe.
         </p>
       </div>
     </section>
@@ -38,7 +38,7 @@
       <div class="container">
         <h2>Environmental Impact</h2>
         <p>
-          Insert your content about Greenpeace's efforts in reducing environmental pollution here.
+          Significant environmental campaigning accomplishments have been made by Greenpeace. They have actively backed laws passed all around the world, including the Forest Rights Act, the Climate Action Now Act, and the European Union's ban on single-use plastics. In 1974, they overcame France and put an end to their atmospheric nuclear tests off the coast of Alaska as their first success. Greenpeace has submitted amicus curiae briefs in favor of environmental issues, although they are not actively involved in Supreme Court cases. For example, in Massachusetts v. Environmental Protection Agency in 2007, they supported Massachusetts' position for EPA control of greenhouse gas emissions. As a non-profit, Greenpeace depends on membership fees, grants, and individual contributions for revenue. Their expenditures encompass a range of activities, such as research, public awareness campaigns, direct actions, and environmental advocacy, with a focus on issues like renewable energy promotion, deforestation prevention, and climate change awareness.
         </p>
       </div>
     </section>
