--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
       <div class="container">
         <h2>Contact Them</h2>
         <p>
-          Insert your contact information and a contact form here.
+          <ul>
+    <li><strong>Greenpeace International:</strong> <a href="https://www.greenpeace.org/" target="_blank">Official Website</a></li>
+    <li><strong>Greenpeace USA:</strong> <a href="https://www.greenpeace.org/usa/" target="_blank">Official Website</a></li>
+          </ul>
         </p>
       </div>
     </section>
