--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <header>
     <nav>
       <ul>
+        <li><a href="#background">Background</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#impact">Environmental Impact</a></li>
         <li><a href="#contact">Contact Them</a></li>
@@ -22,6 +23,15 @@
       <div class="hero-content">
         <h1>Greenpeace</h1>
         <p>Working towards a cleaner, greener world.</p>
+      </div>
+    </section>
+
+    <section id="about">
+      <div class="container">
+        <h2>Background</h2>
+        <p>
+          insert text here
+        </p>
       </div>
     </section>
 
