--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="container">
         <h2>Background</h2>
         <p>
-          insert text here
+          The Great Smog in 1952 killed 8000 people in London. This event was caused by a period of cold weather combined with windless conditions that formed a dense layer of airborne pollutants, mostly from coal plants, over the city. Beginning about 1000 CE, the use of coal for fuel caused considerable air pollution, and the conversion of coal to coke for iron smelting beginning in the 17th century exacerbated the problem. In Europe, from the Middle Ages well into the early modern era, unsanitary urban conditions favored the outbreak of population-decimating epidemics of disease, from plague to cholera and typhoid fever. Through the 19th century, water and air pollution and the accumulation of solid wastes were largely problems of congested urban areas. But, with the rapid spread of industrialization and the growth of the human population to unprecedented levels, pollution became a universal problem. Other persistent chemicals that accumulate in the food chain and disrupt the natural balance of ecosystems on a wide scale. Noxious levels of air pollution are common in many large cities, where particulates and gasses from transportation, heating, and manufacturing accumulate and linger. The problem of plastic pollution on land and in the oceans has only grown as the use of single-use plastics has burgeoned worldwide. In addition, greenhouse gas emissions, such as methane and carbon dioxide, continue to drive global warming and pose a great threat to biodiversity and public health.
         </p>
       </div>
     </section>
