--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
     </section>
 
-    <section id="about">
+    <section id="background">
       <div class="container">
         <h2>Background</h2>
         <p>
